# scm-api-bugowlai-task

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 95e1a31eab38_initial_migration_with_models.py
app/: main.py
app/backend/api/v1/: router.py
app/backend/api/v1/endpoints/: analytics.py  moderation.py
app/backend/api/v2/: router.py
app/backend/core/: config.py
app/backend/database/: session.py
app/backend/models/: moderation.py
app/backend/schemas/: analytics.py  moderation.py
app/backend/services/: analytics_service.py  llm_service.py  moderation_service.py  notification_service.py
app/deployment/: .env.example  Dockerfile  docker-compose.hf.yml
app/deployment/alembic/: env.py
app/deployment/alembic/versions/: 95e1a31eab38_initial_migration_with_models.py
test/: bot_test.ipynb
