[project]
name = "scm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.34.4",
    "ipykernel>=6.30.1",
    "langchain-groq>=0.3.7",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "slack-sdk>=3.36.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
